# LLM

./: .gitignore  CMakeLists.txt  README.MD  build.py  build.sh
Resources/: downloadGPT2.py
Targets/GPT2/: BPE.hpp  CMakeLists.txt  Main.cpp  Model.hpp  ModelKVCache.hpp  ModelNaive.hpp  Runner.hpp  RunnerKVCache.hpp  RunnerNaive.hpp  main.cpp
